@@ -1,0 +1,75 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+                      "http://www.w3.org/TR/xhtml1/DTDxhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+<head>
+  <title>Spellchecking d-i translations</title>
+  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1"/>
+  <style type="text/css">
+    body { font: 14px/20px Arial, Helvetica, sans-serif; background: #ffffff; }
+    th { background: #eeaaaa; text-align: center; }
+    td { line-height: 115%; padding: 5px; text-align: center; vertical-align: middle; }
+    th.col1 { width: 90pt; }
+    th.t1 { width: 50pt; }
+    td.col1 { background: #eeeeee; font-weight: bold; }
+    td.stats { text-align: center; }
+  </style>
+</head>
+
+<body>
+<h1>Spellchecking d-i translations</h1>
+
+<p>
+This page contains informations that should help translators to find
+typos in po files. A set of scripts runs every day against a checkout
+of the SVN repository and results are made available on this page.
+</p>
+
+<p>
+The idea is to gather, for each language, all the translated strings
+into one big file after having filtered out all the unnecessary stuff
+(like comments, variables and original strings) and then running
+<tt>aspell</tt> non-interactively in order to produce a file
+containing all the words not contained in the language dictionary.
+</p>
+
+<p>
+Since <tt>aspell</tt> lets you use custom word lists (<em>WL</em>), it
+will be possible to reduce the list of unknown words, creating a
+custom <em>WL</em> using the following formula:
+
+<br><br>
+	<div align="center"><em>wl = common_wl + language-specific_wl</em></div>
+
+<p>
+where <em>common_wl</em> is a list of words common to all languages (things
+like Lilo, Grub, FAT, ReiserFS) and <em>language-specific_wl</em> is a list of
+words not recognised by <tt>aspell</tt>. 
+</p>
+
+<p>
+At the moment <em>WL</em>s are supported but not used yet; once the tool will be 
+more mature they'll be added to the repository.
+</p>
+
+<!-- HTML TABLE STARTS HERE -->
+
+<!-- HTML TABLE ENDS HERE -->
+
+<br><br>
+<img src="latest/graph.png" width="640" height="480" border="0" alt="">
+<br><br>
+
+<br>
+<hr color="#eeaaaa">
+
+<small>
+This page is automatically generated as part of the spellcheck process for d-i translations.<br>
+Please mail <a href="mailto:zinosat@tiscali.it?Subject=d-i spell check">zinosat@tiscali.it</a>
+for more information.<br>
+Time of last build: <!-- TODAY DATE -->
+</small>
+
+</body>
+</html>
